# holosophos-erc3

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
holosophos/: main_agent.py  server.py  settings.py
holosophos/agents/: librarian.py  mle_solver.py  proposer.py  reviewer.py  writer.py
holosophos/codearkt/: LICENSE  codeact.py  event_bus.py  llm.py  otel.py  prompt_storage.py  python_executor.py  server.py  util.py
holosophos/prompts/: default.yaml
holosophos_erc/: main_agent.py  server.py  settings.py  utils.py
holosophos_erc/agents/: __init__.py  librarian.py  mle_solver.py  proposer.py  reviewer.py  writer.py
holosophos_erc/codearkt/: LICENSE  __init__.py  codeact.py  event_bus.py  llm.py  otel.py  prompt_storage.py  python_executor.py  server.py  util.py
holosophos_erc/erc_agents/: corporate_agent.py  store_agent.py
